Header / Currency Choice / Fixed the styles on mobile

--- a/src/styles/sass/components/_menu.scss
+++ b/src/styles/sass/components/_menu.scss
@@ -265,7 +265,6 @@
         justify-content: space-between;
         position: relative;
 
-        width: 100px;
         color: white;
         background-color: $black;
         border: 1px solid white;
@@ -274,10 +273,11 @@
         font-variant: small-caps;
         line-height: 29px;
         text-align: center;
-        font-size: 20px;
 
-        padding: 5px 10px;
-        margin-right: 15px;
+        width: 74px;
+        font-size: 12px;
+        padding: 1px 10px;
+        margin: 0px 10px;
 
         transition: 500ms;
         cursor: pointer;
@@ -287,23 +287,36 @@
         }
 
         .down-arrow {
-            width: 25px;
+            width: 20px;
             height: auto;
+            margin-left: 5px;
+        }
+
+        @include mq("phone") {
+            width: 100px;
+            font-size: 20px;
+            padding: 5px 10px;
+            margin-right: 15px;
+
+            .down-arrow {
+                width: 25px;
+                height: auto;
+                margin-left: 0px;
+            }
         }
     }
     .currencies-dropdown-content {
         position: absolute;
-        width: 100px;
         border: 1px solid white;
         background-color: $black;
         border-top: 0px;
-
+        width: 74px;
         font-weight: bold;
         font-variant: small-caps;
         line-height: 29px;
         text-align: left;
-        font-size: 20px;
-
+        font-size: 12px;
+        margin-left: 10px;
         li {
             transition: 500ms;
             padding: 5px 10px;
@@ -311,6 +324,11 @@
             &:hover {
                 opacity: 0.65;
             }
+        }
+
+        @include mq("phone") {
+            width: 100px;
+            font-size: 20px;
         }
     }
 }
